TSK-1282: replaced Collections.singleton with Set.of in all tests